# naptime

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  index.doctree
.github/workflows/: docs.yml  publish.yml  tests.yml
_modules/: index.html
_modules/naptime/: baseline.html  data.html  elasticc.html  modules.html
_sources/: index.rst.txt
docs/: Makefile  api.rst  conf.py
src/naptime/: baseline.py  cli.py  data.py  elasticc.py  modules.py  serve.py
src/naptime/models/: .gitignore  README.md  manifest.json
tests/: conftest.py  test_baseline.py  test_elasticc.py  test_modules.py
