[project]
name = "naptime"
version = "0.1.1"
description = "ConvGNP-like joint reconstruction and classification models for irregular multi-band light curves."
readme = "README.md"
authors = [
    { name = "Nicholas Earl", email = "contact@nicholasearl.me" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "click>=8.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "alerce>=2.3.0",
    "nicegui>=3.9.0",
    "plotly>=6.6.0",
    "astropy>=7.2.0",
    "black>=26.5.0",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
train = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
]
brokers = [
    "alerce>=1.4.0",
]
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
naptime = "naptime.cli:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8.6",
    "sphinx-autodoc-typehints>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/naptime"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
